--- a/website-jeddah municipality.html
+++ b/website-jeddah municipality.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="jeddah-municipality-logo-.png" alt="Logo" class="header-logo">
+        <img src="icons/jeddah-municipality-logo-.png" alt="Logo" class="header-logo">
         <div class="logo-search">
             <div class="search-container">
                 <input type="text" placeholder="بحث">
@@ -25,11 +25,11 @@
     </header>
 
     <!-- The triangle image positioned on the right side -->
-    <img class="triangle-img top-offset" src="Frame 133610.png" alt="Triangle">
+    <img class="triangle-img top-offset" src="icons/Frame 133610.png" alt="Triangle">
 
     <nav id="side-menu">
         <button class="close-icon" onclick="toggleMenu()">
-            <img src="cross symbol x.png" alt="Close">
+            <img src="icons/cross symbol x.png" alt="Close">
         </button>
         <ul>
             <li><a href="#">الصفحة الرئيسية</a></li>
@@ -118,11 +118,11 @@
     </main>
     <footer>
         <div class="footer-right buttom-offset">
-            <img src="Frame 133612.png" alt="Left Image">
+            <img src="icons/Frame 133612.png" alt="Left Image">
         </div>
         <p class="copyright">Copyright &copy; Nuran Muyini & Layan Alzahrani</p>
         <div class="footer-left">
-            <img src="jeddah-municipality-logo-.png" alt="Right Image">
+            <img src="icons/jeddah-municipality-logo-.png" alt="Right Image">
         </div>
     </footer>
 
