Complete the solutions section

--- a/website-jeddah municipality.html
+++ b/website-jeddah municipality.html
@@ -14,12 +14,12 @@
         <div class="logo-search">
             <div class="search-container">
                 <input type="text" placeholder="بحث">
-                <img src="icons\Search.svg" alt="Search Icon" class="search-icon">
+                <img src="icons/Search.svg" alt="Search Icon" class="search-icon">
             </div>
 
 
             <div class="menu-icon" onclick="toggleMenu()">
-                <img id="logo" src="icons\menu.svg" alt="Menu">
+                <img id="logo" src="icons/menu.svg" alt="Menu">
             </div>
         </div>
     </header>
@@ -32,19 +32,17 @@
             <img src="icons/cross symbol x.png" alt="Close">
         </button>
         <ul>
-            <li><a href="#">الصفحة الرئيسية</a></li>
+            <li><a href="website-jeddah municipality.html">الصفحة الرئيسية</a></li>
             <li class="dropdown">
                 <span class="dropdown-button">الفئات</span>
-                <ul>
-                    <div class="dropdown-content">
-                        <a href="#">طلب ويبكس</a>
-                        <a href="#">الطابعات والباركود</a>
-                        <a href="#">دعم تقني</a>
-                        <a href="#">الشبكة</a>
-                        <a href="#">البريد الالكتروني</a>
-                        <a href="#">دعم هاتف Cisco</a>
+                <ul class="dropdown-content">
+                    <li><a href="#webex">طلب ويبكس</a></li>
+                    <li><a href="#printers">الطابعات والباركود</a></li>
+                    <li><a href="#support">دعم تقني</a></li>
+                    <li><a href="#network">الشبكة</a></li>
+                    <li><a href="#email">البريد الالكتروني</a></li>
+                    <li><a href="#cisco">دعم هاتف Cisco</a></li>
                 </ul>
-                </div>
             </li>
         </ul>
     </nav>
@@ -129,8 +127,16 @@
     <script>
         function toggleMenu() {
             const menu = document.getElementById('side-menu');
+            console.log('Toggle menu function called');
             menu.classList.toggle('open');
         }
+        function toggleDropdown() {
+    const dropdownContent = document.querySelector('.dropdown-content');
+    dropdownContent.classList.toggle('show');
+}
+
+document.querySelector('.dropdown-button').addEventListener('click', toggleDropdown);
+
 
         const categories = {
     email: {
@@ -139,8 +145,31 @@
         color: '#FFE0F2',
         subcategories: {
             'لا تصل الايميلات الجديده': 'التأكد من مكافي',
-            'ارشفة البريد الالكتروني': 'صور من الPDF',
-            'العمل دون اتصال للبريد':'pdf'
+            'ارشفة البريد الالكتروني': `1.	تشغيل تطبيق البريد الإلكتروني(Outlook)<br><br>
+                                        2.	اختيار تبويب ملف<br><br>
+                                        3.	اختيار معلومات من القائمة اليمين <br><br>
+                                        4.	اختيار أرشفة من أيقونة أدوات التنظيف<br><br>
+                                           <img src="البريد الالكتروني/ارشفة البريد الالكتروني1.jpg"><br><br>
+                                        5.ستظهر نافذة منبثقة بعنوان الأرشفة<br><br>
+                                         <img src="البريد الالكتروني/ارشفة البريد الالكتروني2.jpg"><br><br>
+                                        6.	اختيار أرشفة هذا المجلد وكافة المجلدات الفرعية، ثم تحديد المجلد المراد أرشفته؛ ملاحظة: عند اختيار أول مجلد(عادة ما يكون اسمه البريد الإلكتروني للمستخدم)، سيتم أرشفة كافة المجلدات الفرعية تحته<br><br>
+                                        7.	تحديد التاريخ المراد عدم الأرشفة بعده في خيار أرشفة العناصر الاقدم من:<br><br>
+                                        8.	في حالة الرغبة في تغيير موقع حفظ ملف الأرشيف، يتم تعديل ذلك في خيار ملف الأرشيف: بالضغط على زر 
+                                        استعراض... وتحديد موقع جديد <br><br>
+                                        9.	الضغط على زر موافق، حيث ستبدأ عملية الأرشفة وستظهر  <img src="البريد الالكتروني/ارشفة البريد الالكتروني 3.jpg">  في أسفل التطبيق <br><br>
+                                        10.	عند انتهاء عملية الأرشفة، سيقوم تطبيق البريد الإلكتروني بفتح ملف الأرشفة في القائمة اليمين للتطبيق <br><br>
+                                         <img src="البريد الالكتروني/ارشفة البريد الالكتروني4.jpg"> 
+
+`,
+            'العمل دون اتصال للبريد':`1.	تشغيل تطبيق البريد الإلكتروني( Outlook)<br><br>
+                                        2.	اختيار تبويب "إرسال / تلقي" <br><br>
+                                         <img src="البريد الالكتروني/العمل دون اتصال 1.jpg"><br><br>
+ 
+                                         3.	الضغط على أيقونة" العمل دون اتصال" لتصبح غير مظللة<br><br>
+                                            <img src="البريد الالكتروني/العمل دون اتصال2.jpg"><br><br>
+                                         4.	يتغير شكل أيقونة تطبيق البريد الإلكتروني الى  <img src="البريد الالكتروني/العمل دون اتصال3.png" width="20">، كما ستظهر رسالة "العمل دون اتصال" اسفل التطبيق<br><br>
+                                         <img src="البريد الالكتروني/العمل دون اتصال4.jpg">
+`
         }
     },
     cisco: {
@@ -160,9 +189,49 @@
         icon: 'icons/IT Support.png',
         color: '#D1F7FD',
         subcategories: {
-            'تشغيل نظام دورة حياة المشاريع': '',
+            'تشغيل نظام دورة حياة المشاريع': 'pdf',
             'تشغيل نظام شامل (تابع لديوان المحاسبة)': 'PDF',
-             'تغير كلمة المرور':'pdf'
+             'تغير كلمة المرور':`الطريقة الأولى: عن طريق واجهة الأمان<br><br><br>
+                1.	تسجيل الدخول في جهاز الحاسب الآلي <br><br><br>
+                2.  الانتقال إلى واجهة الأمان بالضغط على الأزرار  Delete + Alt + Ctrl في نفس الوقت<br><br>
+                3.	اختيار <img src="تغير كلمه المرور/كلمة مرور1.jpg"> <br><br>
+                    <img src="تغير كلمه المرور/كلمة مرور2.jpg"> <br><br>
+                4.	كتابة كلمة المرور القديمة، ثم كتابة كلمة المرور الجديدة وتأكيدها وفق سياسات أمن المعلومات<br><br>
+                5.	الضغط على السهم <img src="تغير كلمه المرور/كلمة مرور3.jpg">  لتنفيذ التغيير <br><br><br><br>
+                الطريقة الثانية: عن طريق واجهة ويب للبريد الإلكتروني <br><br><br>
+               1.الذهاب إلى موقع الأمانة الرئيسي <a href=https://www.jeddah.gov.sa/index.php>اضغط هنا</a> <br><br><br>
+                <img src="تغير كلمه المرور/كلمة مرور4.jpg"><br><br>
+               2.	  الضغط على رابط  <img src="تغير كلمه المرور/كلمة مرور9.jpg"> في أسفل موقع الأمانة الرئيسي، حيث سيتم الانتقال إلى واجهة ويب للبريد لإلكتروني
+               <a href="https://outlook.jeddah.gov.sa ">اضغط هنا</a><br><br>
+               <img src="تغير كلمه المرور/كلمة مرور5.jpg"><br><br>
+               3.تسجيل الدخول على البريد الإلكتروني،ثم الضغط على أيقونة "الإعدادات"<img src="تغير كلمه المرور/كلمة مرور6.jpg"width="15">في اعلى جهة اليسار للواجهة العربية<br><br>
+               4.اختيار "تغيير كلمة المرور" في القائمة المنسدلة<br><br>
+               <img src="تغير كلمه المرور/كلمة مرور7.jpg"><br><br>
+               5.	سيتم الانتقال إلى صفحة" كلمة المرور"<br><br>
+               <img src="تغير كلمه المرور/كلمة مرور8.jpg"><br><br>
+               6.	كتابة كلمة المرور الحالية، ثم كتابة كلمة المرور الجديدة وتأكيدها وفق سياسات أمن المعلومات<br><br>
+               7.	الضغط على زر" حفظ" <br><br><br><br>
+               الطريقة الثالثة: عن طريق خدمة تغيير كلمة المرور للموظفين <br><br><br>
+               1.الذهاب إلى موقع الأمانة الرئيسي <a href=https://www.jeddah.gov.sa/index.php>اضغط هنا</a> <br><br><br>
+              <img src="تغير كلمه المرور/كلمة مرور4.jpg"><br><br>
+               2. الضغط على رابط  <img src="تغير كلمه المرور/كلمة مرور9.jpg"> في أسفل موقع الأمانة الرئيسي، حيث سيتم الانتقال إلى واجهة ويب للبريد لإلكتروني
+               <a href="https://outlook.jeddah.gov.sa ">اضغط هنا </a><br><br>
+               <img src="تغير كلمه المرور/كلمة مرور5.jpg"><br><br>
+               3.	الضغط على رابط <img src="تغير كلمه المرور/كلمة مرور10.jpg">  ليتم الانتقال إلى صفحة" تغيير كلمة المرور للموظفين" على الرابط 
+ <a href="http://services.jeddah.gov.sa/ResetPassword">اضغط هنا</a><br><br>
+ 4.	يتم إدخال الرقم الوظيفي ورقم الهوية والنص التأكيدي ثم الضغط على زر" استرجاع البيانات" <br><br>
+ <img src="تغير كلمه المرور/كلمة مرور 11.jpg"><br><br>
+ 5.	في حالة عدم صحة البيانات المدخلة، ستظهر الرسالة التالية:<br><br>
+ <img src="تغير كلمه المرور/كلمة مرور12.jpg"><br><br>
+ 6.	في حالة صحة البيانات المدخلة، ستظهر بيانات المستخدم. لإكمال عملية تغيير كلمة المرور، يتم الضغط على زر 
+"إرسال كود التفعيل"؛ حيث سيتم إرسال كود التفعيل على جوال المستخدم المسجل في شؤون الموظفين والموضح في البيانات الظاهرة للمستخدم <br><br>
+<img src="تغير كلمه المرور/14مرور.jpg"><br><br>
+7.	عند استقبال كود التفعيل يتم كتابته في الحقل الخاص به ثم الضغط على زر" تفعيل الكود"<br><br>
+<img src="تغير كلمه المرور/كلمة مرور13.jpg"><br><br>
+8.	بعد تفعيل الكود، سيظهر حقلين لإدخال كلمة المرور الجديدة وتأكيدها وفق سياسيات أمن المعلومات ثم الضغط على زر" تغيير كلمة المرور" <br><br>
+9.	عند سلامة الإدخال ستظهر رسالة <img src="تغير كلمه المرور/كلمة مرور15.jpg"><br><br>
+<img src="تغير كلمه المرور/كلمة مرور17.jpg">
+                `
         }
     },
     printers: {
@@ -183,7 +252,24 @@
             'تفعيل نقطة شبكة (ادارات و محافظات و بلديات)': `يتم اخذ الماك ادرس مع اخر اتصال للشبكة وتحويل البلاغ لقسم الشبكات<br>
                                                         ((في حالة عدم اتصال الجهاز بالشبكة لمدة اكثر من شهر يتم عمل فورمات))`,
             'الانترنت لايعمل (داخل المبنى)': 'اضافة بروكسي والتأكد من صلاحيات الانترنت',
-            'استخراج عنوان الIP':'pdf'
+            'استخراج عنوان الIP':`الطريقة الأولى: عن طريق الإعدادات<br><br>
+            1.	 النقر بزر الفأرة الأيمن على أيقونة الشبكة<img src="الشبكة/شبكة1.jpg" width="20" high="0">   من شريط المهام <br><br>
+            2.	الضغط على "فتح إعدادات الشبكة والإنترنت" من القائمة المنبثقة<br><br>
+            <img src="الشبكة/شبكة2.png" width="200"><br>
+            3.   اختيار"Ethernet" في القائمة اليمين من شاشة الإعدادات، ثم الضغط على ايقونة الشبكة المحلية<img src="الشبكة/شبكة3.jpg" >  في المنطقة اليسار <br><br>        
+            <img src="الشبكة/شبكه4.jpg"><br><br>
+            4.ستنتقل الى شاشة أخرى حيث سيظهر العنوان الشبكي تحت "خصائص" بجانب الصورة أدناه العنوان الشبكي هوا(192,168,1,1)<br><br>
+            <img src="الشبكة/شبكة5.jpg"><br><br><br><br><br>
+            الطريقة الثانية: عن طريق لوحة التحكم<br><br>
+            1. فتح لوحة التحكم <br><br>
+            2.الضغط على رابط مجموعة "مركز الشبكة والمشاركة"،ثم الضغط على ايقونة<img src="الشبكة/شبكة6.jpg"><br><br>
+            <img src="الشبكة/شبكه7.jpg"><br><br>
+            3.اختار"التفاصيل..."في النافذة المنبثقة"حالة Ethernet"<br><br>
+            <img src="الشبكة/شبكة8.jpg"><br><br>
+            4.   ستنتقل إلى نافذة "تفاصيل اتصال الشبكة"حيث سيظهر العنوان الشبكي بجانب"عنوان IPv4"<br><br>
+            <img src="الشبكة/شبكة9.jpg">
+
+            `
         }
     },
     webex: {
