--- a/website-jeddah municipality.html
+++ b/website-jeddah municipality.html
@@ -189,8 +189,10 @@ document.querySelector('.dropdown-button').addEventListener('click', toggleDropd
         icon: 'icons/IT Support.png',
         color: '#D1F7FD',
         subcategories: {
-            'تشغيل نظام دورة حياة المشاريع': 'pdf',
-            'تشغيل نظام شامل (تابع لديوان المحاسبة)': 'PDF',
+            'تشغيل نظام دورة حياة المشاريع': `لمعرفة الخطوات قم بالضغط على 
+            <a href="https://1drv.ms/b/s!Aov6g2brkEr1q2hM4Ud4zu_xRxrh?e=dTbHIS" "target="_blank" style="color: blue; text-decoration: underline;">دليل نظام الكروكيات</a>.`,
+            'تشغيل نظام شامل (تابع لديوان المحاسبة)': `لمعرفة الخطوات قم بالضغط على 
+            <a href="https://1drv.ms/w/s!Aov6g2brkEr1q2ac4jAhwFDoXEn0?e=G5jWtY" "target="_blank" style="color: blue; text-decoration: underline;"></a>`,
              'تغير كلمة المرور':`الطريقة الأولى: عن طريق واجهة الأمان<br><br><br>
                 1.	تسجيل الدخول في جهاز الحاسب الآلي <br><br><br>
                 2.  الانتقال إلى واجهة الأمان بالضغط على الأزرار  Delete + Alt + Ctrl في نفس الوقت<br><br>
@@ -268,7 +270,6 @@ document.querySelector('.dropdown-button').addEventListener('click', toggleDropd
             <img src="الشبكة/شبكة8.jpg"><br><br>
             4.   ستنتقل إلى نافذة "تفاصيل اتصال الشبكة"حيث سيظهر العنوان الشبكي بجانب"عنوان IPv4"<br><br>
             <img src="الشبكة/شبكة9.jpg">
-
             `
         }
     },
@@ -411,7 +412,6 @@ function goBack() {
         }, 500);
     }
 }
-
     </script>
 </body>
 
